tests/programs/invalid/InvalidInterfaceFields.java
public interface InvalidInterfaceFields {
    int interfaceField = 10;  // Invalid field in an interface
}
